--- a/Pricing.html
+++ b/Pricing.html
@@ -98,7 +98,7 @@
       margin-top: 30px;
     }
     .card {
-      background: #1e293b;
+      background: #0f172a;
       padding: 20px;
       border-radius: 8px;
       text-align: center;
@@ -263,6 +263,7 @@
   </script>
 </body>
 </html>
+
 
 
 
