--- a/Pricing.html
+++ b/Pricing.html
@@ -97,12 +97,14 @@
       gap: 20px;
       margin-top: 30px;
     }
-    .card {
-      background: #0f172a;
-      padding: 20px;
-      border-radius: 8px;
-      text-align: center;
-    }
+ .card {
+  background: #1e293b;              /* darker blue-gray for contrast */
+  padding: 20px;
+  border-radius: 12px;
+  text-align: center;
+  box-shadow: 0 6px 12px rgba(0,0,0,0.25); /* subtle shadow */
+  transition: transform 0.3s ease;
+}
     .card h2 {
       font-size: 1.4rem;
       font-weight: 600;
