--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -189,7 +189,8 @@
       <a href="index.html">Home</a>
       <a a href="index.html#services">Services</a>
       <a href="index.html#work">Work</a>
-      <a href="Pricing.html" class="active">Pricing</a> <!-- Active page -->
+      <a href="Pricing/" class="active">Pricing</a>
+<!-- Active page -->
       <a href="index.html#contact">Contact</a>
       <!-- ✅ Fixed button: White text on blue bg -->
       <a class="btn small" href="services.html" >All Services</a>
