--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pricing — AS TECH IT SOLUTION</title>
   <meta name="description" content="Affordable website, app, and software development pricing by AS TECH IT SOLUTION.">
-  <link rel="icon" href="assets/img/mylogo.png">
+  <a class="brand" href="/">
+    <img alt="AS TECH IT SOLUTION logo" src="/assets/img/mylogo.png" width="56" height="56">
+    <span>AS TECH IT SOLUTION</span>
+  </a>
   <link rel="stylesheet" href="assets/css/styles.css">
 
   <style>
@@ -189,7 +192,7 @@
       <a href="index.html">Home</a>
       <a a href="index.html#services">Services</a>
       <a href="index.html#work">Work</a>
-      <a href="Pricing/" class="active">Pricing</a>
+      <a href="/Pricing/" class="active">Pricing</a>
 <!-- Active page -->
       <a href="index.html#contact">Contact</a>
       <!-- ✅ Fixed button: White text on blue bg -->
