--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <a href="index.html" style="color:#3b82f6 !important;">Home</a>
       <a href="#services">Services</a>
       <a href="#work">Work</a>
-    <a href="Pricing/">Pricing</a>
+    <a href="pricing/">Pricing</a>
       <a href="#contact">Contact</a>
       <a class="btn small" href="services.html">All Services</a>
     </nav>
