--- a/pricing/index.html
+++ b/pricing/index.html
@@ -8,11 +8,11 @@
   <meta name="description" content="Affordable website, app, and software development pricing by AS TECH IT SOLUTION.">
 
   <!-- Favicon -->
-  <link rel="icon" href="/assets/img/mylogo.png">
+  <link rel="icon" href="assets/img/mylogo.png">
+  <link rel="stylesheet" href="assets/css/styles.css">
 
-  <!-- Styles -->
   <style>
-    /* ====== Base ====== */
+    /* --- Base --- */
     body {
       margin: 0;
       padding: 0;
@@ -20,63 +20,52 @@
       color: #fff;
       font-family: Arial, sans-serif;
     }
+    a { text-decoration: none; }
 
-    a {
-      text-decoration: none;
-    }
-
-    /* ====== Header ====== */
+    /* --- Header --- */
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 14px 20px;
+      padding: 12px 20px;
       background: #0f172a;
       position: relative;
       z-index: 1000;
     }
-
     .brand {
       display: flex;
       align-items: center;
       gap: 8px;
+      color: #fff;
       font-weight: bold;
       font-size: 18px;
-      color: #fff;
     }
-
     .brand img {
       width: 56px;
       height: 56px;
     }
-
     nav {
       display: flex;
-      gap: 14px;
+      gap: 10px;
     }
-
     nav a {
       color: #fff;
       font-weight: 500;
     }
-
     nav a:hover,
-    nav a.active {
-      color: #3b82f6;
-    }
+    nav a.active { color: #3b82f6; }
 
     .btn {
       background: #3b82f6;
       color: #fff !important;
-      padding: 8px 18px;
+      padding: 8px 16px;
       border-radius: 6px;
+      font-weight: 600;
       transition: background 0.3s;
     }
-    .btn:hover {
-      background: #06b6d4;
-    }
+    .btn:hover { background: #06b6d4; }
 
-    /* ====== Mobile Menu ====== */
+    /* --- Mobile Menu --- */
     .menu-toggle {
       display: none;
       background: none;
@@ -89,7 +78,6 @@
       top: 50%;
       transform: translateY(-50%);
     }
-
     @media (max-width: 768px) {
       nav {
         display: none;
@@ -101,53 +89,35 @@
         width: 100%;
         padding: 1rem;
         border-radius: 0 0 12px 12px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+        box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       }
-      nav.active {
-        display: flex;
-      }
-      nav a {
-        padding: 6px 0;
-      }
-      .menu-toggle {
-        display: block;
-      }
+      nav.active { display: flex; }
+      nav a { padding: 6px 0; }
+      .menu-toggle { display: block; }
     }
 
-    /* ====== Main ====== */
+    /* --- Main --- */
     main {
-      padding: 30px 20px;
-      max-width: 1100px;
-      margin: auto;
+      padding: 20px;
     }
-
     main h1 {
       font-size: 2rem;
       margin-bottom: 10px;
     }
+    main p { color: #ccc; }
 
-    main p {
-      color: #ccc;
-    }
-
-    /* ====== Pricing Grid ====== */
-    .pricing-grid {
+    /* --- Pricing Grid --- */
+    .services-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 20px;
       margin-top: 30px;
     }
-
     @media (max-width: 992px) {
-      .pricing-grid {
-        grid-template-columns: repeat(2, 1fr);
-      }
+      .services-grid { grid-template-columns: repeat(2, 1fr); }
     }
-
     @media (max-width: 768px) {
-      .pricing-grid {
-        grid-template-columns: 1fr;
-      }
+      .services-grid { grid-template-columns: 1fr; }
     }
 
     .card {
@@ -158,10 +128,7 @@
       box-shadow: 0 6px 12px rgba(0,0,0,0.25);
       transition: transform 0.3s;
     }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-
+    .card:hover { transform: translateY(-5px); }
     .card h2 {
       font-size: 1.4rem;
       font-weight: 600;
@@ -170,14 +137,12 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-
     .price {
       font-size: 20px;
       font-weight: bold;
       margin: 10px 0;
       color: #3b82f6;
     }
-
     .list {
       list-style: none;
       padding: 0;
@@ -187,7 +152,7 @@
       line-height: 1.7;
     }
 
-    /* ====== Footer ====== */
+    /* --- Footer --- */
     footer {
       text-align: center;
       padding: 20px;
@@ -195,39 +160,33 @@
       color: #888;
       margin-top: 40px;
     }
-
-    footer a {
-      color: #3b82f6;
-      margin-left: 8px;
-    }
+    footer a { color: #3b82f6; margin-left: 8px; }
   </style>
 </head>
 <body>
   <!-- Header -->
-  <header>
-    <a class="brand" href="/">
-      <img src="/assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
+  <header class="container header">
+    <a class="brand" href="index.html">
+      <img src="assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
       <span>AS TECH IT SOLUTION</span>
     </a>
-
     <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
-
     <nav>
-      <a href="/index.html">Home</a>
-      <a href="/index.html#services">Services</a>
-      <a href="/index.html#work">Work</a>
-      <a href="/pricing/" class="active">Pricing</a>
-      <a href="/index.html#contact">Contact</a>
-      <a class="btn" href="/services.html">All Services</a>
+      <a href="index.html">Home</a>
+      <a href="index.html#services">Services</a>
+      <a href="index.html#work">Work</a>
+      <a href="pricing.html" class="active">Pricing</a>
+      <a href="index.html#contact">Contact</a>
+      <a class="btn" href="services.html">All Services</a>
     </nav>
   </header>
 
   <!-- Main -->
-  <main>
+  <main class="container">
     <h1>Pricing Plans</h1>
     <p>Transparent and flexible packages. Choose the one that fits your needs, or contact us for a custom quote.</p>
 
-    <div class="pricing-grid">
+    <div class="services-grid">
       <!-- Basic -->
       <div class="card">
         <h2>Basic Website</h2>
@@ -239,7 +198,7 @@
           <li>✔ Basic SEO Setup</li>
           <li>✔ 24/7 Support</li>
         </ul>
-        <a href="/index.html#contact" class="btn">Get Started</a>
+        <a href="index.html#contact" class="btn">Get Started</a>
       </div>
 
       <!-- Standard -->
@@ -253,7 +212,7 @@
           <li>✔ Cloud Storage</li>
           <li>✔ 24/7 Support</li>
         </ul>
-        <a href="/index.html#contact" class="btn">Get Started</a>
+        <a href="index.html#contact" class="btn">Get Started</a>
       </div>
 
       <!-- Premium -->
@@ -267,26 +226,23 @@
           <li>✔ Maintenance & Support</li>
           <li>✔ 24/7 Support</li>
         </ul>
-        <a href="/index.html#contact" class="btn">Get Quote</a>
+        <a href="index.html#contact" class="btn">Get Quote</a>
       </div>
     </div>
   </main>
 
   <!-- Footer -->
-  <footer>
-    <p>© <span id="year"></span> AS TECH IT SOLUTION. All rights reserved. <a href="/index.html">Home</a></p>
+  <footer class="container footer">
+    <p>© <span id="year"></span> AS TECH IT SOLUTION. All rights reserved. <a href="index.html">Home</a></p>
   </footer>
 
   <!-- Scripts -->
   <script>
-    // Mobile Menu Toggle
     const menuToggle = document.querySelector('.menu-toggle');
     const nav = document.querySelector('nav');
     menuToggle.addEventListener('click', () => {
       nav.classList.toggle('active');
     });
-
-    // Auto Year in Footer
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
