--- a/pricing/index.html
+++ b/pricing/index.html
@@ -166,8 +166,8 @@
 <body>
   <!-- Header -->
   <header class="container header">
-    <a class="brand" href="index.html">
-      <img src="assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
+     <a class="brand" href="/">
+      <img src="/assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
       <span>AS TECH IT SOLUTION</span>
     </a>
     <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
