--- a/pricing/index.html
+++ b/pricing/index.html
@@ -10,7 +10,7 @@
   <!-- Favicon -->
   <link rel="icon" href="assets/img/mylogo.png">
   <link rel="stylesheet" href="assets/css/styles.css">
-
+<link rel="stylesheet" href="../assets/css/styles.css">
   <style>
     /* --- Base --- */
     body {
