--- a/pricing/index.html
+++ b/pricing/index.html
@@ -231,9 +231,11 @@
     </div>
   </main>
 
+  
   <!-- Footer -->
   <footer class="container footer">
-    <p>© <span id="year"></span> AS TECH IT SOLUTION. All rights reserved. <a href="index.html">Home</a></p>
+    <p>© <span id="year"></span> AS TECH IT SOLUTION. All rights reserved.</p>
+    <a href="index.html">Home</a>
   </footer>
 
   <!-- Scripts -->
