--- a/pricing/index.html
+++ b/pricing/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="Affordable website, app, and software development pricing by AS TECH IT SOLUTION.">
 
   <!-- Favicon -->
-  <link rel="icon" href="assets/img/mylogo.png">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="icon" href="../assets/img/mylogo.png">
+  
 <link rel="stylesheet" href="../assets/css/styles.css">
   <style>
     /* --- Base --- */
