--- a/pricing/index.html
+++ b/pricing/index.html
@@ -175,9 +175,9 @@
       <a href="index.html">Home</a>
       <a href="index.html#services">Services</a>
       <a href="index.html#work">Work</a>
-      <a href="pricing.html" class="active">Pricing</a>
+      <a href="/pricing" class="active">Pricing</a>
       <a href="index.html#contact">Contact</a>
-      <a class="btn" href="services.html">All Services</a>
+      <a class="btn" href="/services">All Services</a>
     </nav>
   </header>
 
