--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 <body>
   <!-- Header -->
   <header class="container header">
-     <a class="brand" href="index.html">
+     <a class="brand" href="index">
       <img src="/assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
       <span>AS TECH IT SOLUTION</span>
     </a>
