--- a/pricing/index.html
+++ b/pricing/index.html
@@ -172,12 +172,13 @@
     </a>
     <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="index.html#services">Services</a>
-      <a href="index.html#work">Work</a>
-      <a href="/pricing" class="active">Pricing</a>
-      <a href="index.html#contact">Contact</a>
-      <a class="btn" href="/services">All Services</a>
+     <a href="/">Home</a>
+     <a href="/#services">Services</a>
+    <a href="/#work">Work</a>
+   <a href="/pricing" class="active">Pricing</a>
+   <a href="/#contact">Contact</a>
+   <a class="btn" href="/services">All Services</a>
+
     </nav>
   </header>
 
