--- a/services/index.html
+++ b/services/index.html
@@ -177,12 +177,12 @@
   <!-- Mobile menu button (top-right) -->
   <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
   <nav>
- <a href="index.html" >Home</a>
-      <a a href="index.html#services">Services</a>
-      <a href="index.html#work">Work</a>
-      <a href="/pricing" >Pricing</a> 
-      <a href="index.html#contact">Contact</a>
-  <a class="btn small active" href="/services">All Services</a>
+ <a href="/">Home</a>
+     <a href="/#services">Services</a>
+    <a href="/#work">Work</a>
+   <a href="/pricing" class="active">Pricing</a>
+   <a href="/#contact">Contact</a>
+   <a class="btn" href="/services">All Services</a>
 
   </nav>
 </header>
