--- a/services/index.html
+++ b/services/index.html
@@ -258,9 +258,9 @@
         </ul>
       </div>
     </div>
-
+ 
     <p style="margin-top:20px;">
-      <a class="btn" href="index.html#contact">Start your project</a>
+      <a class="btn" href="/#contact">Start your project</a>
     </p>
   </main>
 
