--- a/pricing/index.html
+++ b/pricing/index.html
@@ -199,7 +199,7 @@
           <li>✔ Basic SEO Setup</li>
           <li>✔ 24/7 Support</li>
         </ul>
-        <a href="index.html#contact" class="btn">Get Started</a>
+        <a href="/#contact" class="btn">Get Started</a>
       </div>
 
       <!-- Standard -->
@@ -213,7 +213,7 @@
           <li>✔ Cloud Storage</li>
           <li>✔ 24/7 Support</li>
         </ul>
-        <a href="index.html#contact" class="btn">Get Started</a>
+        <a href="/#contact" class="btn">Get Started</a>
       </div>
 
       <!-- Premium -->
@@ -227,7 +227,7 @@
           <li>✔ Maintenance & Support</li>
           <li>✔ 24/7 Support</li>
         </ul>
-        <a href="index.html#contact" class="btn">Get Quote</a>
+        <a href="/#contact" class="btn">Get Quote</a>
       </div>
     </div>
   </main>
@@ -236,7 +236,7 @@
   <!-- Footer -->
   <footer class="container footer">
     <p>© <span id="year"></span> AS TECH IT SOLUTION. All rights reserved.</p>
-    <a href="index.html">Home</a>
+    <a href="/">Home</a>
   </footer>
 
   <!-- Scripts -->
