--- a/services/index.html
+++ b/services/index.html
@@ -267,7 +267,7 @@
   <!-- Footer -->
   <footer class="container footer">
     <p>© <span id="year"></span> AS TECH IT SOLUTION. All rights reserved.</p>
-    <a href="index.html">Home</a>
+    <a href="/">Home</a>
   </footer>
 
   <script>
