--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
         pointer-events: none;
         transition: max-height 0.4s ease, opacity 0.4s ease;
       }
-
+ nav a:hover,
+    nav a.active { color: #3b82f6; }
       nav.active {
         max-height: 500px;
         opacity: 1;
