--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
       }
  nav a:hover,
     nav a.active { color: #3b82f6; }
-      nav.active {
+      nav.active { 
+        color: #3b82f6;
         max-height: 500px;
         opacity: 1;
         pointer-events: auto;
