--- a/index.html
+++ b/index.html
@@ -158,13 +158,9 @@
         pointer-events: none;
         transition: max-height 0.4s ease, opacity 0.4s ease;
       }
-
-      nav.active { 
-        color: #3b82f6;
-        max-height: 500px;
-        opacity: 1;
-        pointer-events: auto;
-      }
+nav a:hover,
+    nav a.active { color: #3b82f6; }
+  
 
       nav a {
        padding: 4px 10px;
