--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ nav a:hover,
     </a>
     <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
     <nav>
-      <a href="index" class="active">Home</a>
+      <a href="/" class="active">Home</a>
       <a href="#services">Services</a>
       <a href="#work">Work</a>
     <a href="pricing/">Pricing</a>
