--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
   </script>
 
   <!-- Favicon -->
- <link rel="icon" type="image/png" sizes="48x48" href="https://astechit.in/img/favicon_48x48.png">
-<link rel="icon" type="image/png" sizes="512x512" href="https://astechit.in/img/favicon_512x512.png">
-<link rel="icon" type="image/x-icon" href="https://astechit.in/img/favicon.ico">
-<link rel="apple-touch-icon" href="https://astechit.in/img/favicon_512x512.png">
+<link rel="icon" type="image/png" sizes="48x48" href="https://astechit.in/assets/img/favicon_48x48.png">
+<link rel="icon" type="image/png" sizes="512x512" href="https://astechit.in/assets/img/favicon_512x512.png">
+<link rel="icon" type="image/x-icon" href="https://astechit.in/assets/img/favicon.ico">
+<link rel="apple-touch-icon" href="https://astechit.in/assets/img/favicon_512x512.png">
 
   <!-- Styles -->
   <link rel="stylesheet" href="assets/css/styles.css">
