--- a/index.html
+++ b/index.html
@@ -166,27 +166,32 @@
     </section>
 
     <!-- Sliding Service Gallery -->
+        <!-- Sliding Service Gallery -->
     <section class="service-gallery container">
       <div class="service-gallery-track" id="serviceTrack">
         <div class="service-slide">
-          <img src="assets/img/service1.jpg" alt="Custom Software Development">
+          <img src="assets/img/simg/SD.jpg" alt="Custom Software Development">
           <div class="service-caption">Custom Software Development</div>
         </div>
         <div class="service-slide">
-          <img src="assets/img/service2.jpg" alt="E-commerce Website">
+          <img src="assets/img/simg/EBI.jpg" alt="E-commerce Website">
           <div class="service-caption">E-commerce Websites</div>
         </div>
         <div class="service-slide">
-          <img src="assets/img/service3.jpg" alt="Mobile App Development">
+          <img src="assets/img/simg/MAD.jpg" alt="Mobile App Development">
           <div class="service-caption">Mobile App Development</div>
         </div>
         <div class="service-slide">
-          <img src="assets/img/service4.jpg" alt="SEO & Digital Marketing">
+          <img src="assets/img/simg/SEO.jpg" alt="SEO & Digital Marketing">
           <div class="service-caption">SEO & Digital Marketing</div>
         </div>
         <div class="service-slide">
-          <img src="assets/img/service5.jpg" alt="Business Tools & Billing Apps">
+          <img src="assets/img/simg/DBS.jpg" alt="Business Tools & Billing Apps">
           <div class="service-caption">Business Tools & Billing Apps</div>
+        </div>
+		 <div class="service-slide">
+          <img src="assets/img/simg/BSM.jpg" alt="Bulk SMS">
+          <div class="service-caption">Bulk SMS</div>
         </div>
       </div>
     </section>
