--- a/index.html
+++ b/index.html
@@ -170,27 +170,27 @@
     <section class="service-gallery container">
       <div class="service-gallery-track" id="serviceTrack">
         <div class="service-slide">
-          <img src="assets/img/simg/SD.jpg" alt="Custom Software Development">
+          <img src="https://astechit.in/assets/img/simg/SD.jpg" alt="Custom Software Development">
           <div class="service-caption">Custom Software Development</div>
         </div>
         <div class="service-slide">
-          <img src="assets/img/simg/EBI.jpg" alt="E-commerce Website">
+          <img src="https://astechit.in/assets/img/simg/EBI.jpg" alt="E-commerce Website">
           <div class="service-caption">E-commerce Websites</div>
         </div>
         <div class="service-slide">
-          <img src="assets/img/simg/MAD.jpg" alt="Mobile App Development">
+          <img src="https://astechit.in/assets/img/simg/MAD.jpg" alt="Mobile App Development">
           <div class="service-caption">Mobile App Development</div>
         </div>
         <div class="service-slide">
-          <img src="assets/img/simg/SEO.jpg" alt="SEO & Digital Marketing">
+          <img src="https://astechit.in/assets/img/simg/SEO.jpg" alt="SEO & Digital Marketing">
           <div class="service-caption">SEO & Digital Marketing</div>
         </div>
         <div class="service-slide">
-          <img src="assets/img/simg/DBS.jpg" alt="Business Tools & Billing Apps">
+          <img src="https://astechit.in/assets/img/simg/DBS.jpg" alt="Business Tools & Billing Apps">
           <div class="service-caption">Business Tools & Billing Apps</div>
         </div>
 		 <div class="service-slide">
-          <img src="assets/img/simg/BSM.jpg" alt="Bulk SMS">
+          <img src="https://astechit.in/assets/img/simg/BSM.jpg" alt="Bulk SMS">
           <div class="service-caption">Bulk SMS</div>
         </div>
       </div>
