--- a/index.html
+++ b/index.html
@@ -374,11 +374,14 @@
 
     /* Service Gallery */
     .service-gallery {
-      margin: 100px 0;
+      margin: 100px auto;
       position: relative;
       overflow: hidden;
       border-radius: 20px;
       height: 500px;
+      max-width: 1000px;
+      width: 90%;
+      box-shadow: var(--shadow-lg);
     }
 
     .service-gallery-track {
