--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
           <a href="#work">Work</a>
           <a href="#pricing">Pricing</a>
           <a href="#contact">Contact</a>
-          <a class="cta-btn" href="#services">Get Started</a>
+          <a class="cta-btn" href="#contact">Get Started</a>
         </nav>
       </div>
     </div>
