--- a/index.html
+++ b/index.html
@@ -827,9 +827,9 @@
         <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
         <nav>
           <a href="#home" class="active">Home</a>
-          <a href="#services">Services</a>
+          <a href="/services">Services</a>
           <a href="#work">Work</a>
-          <a href="#pricing">Pricing</a>
+          <a href="/pricing">Pricing</a>
           <a href="#contact">Contact</a>
           <a class="cta-btn" href="#contact">Get Started</a>
         </nav>
