--- a/services/index.html
+++ b/services/index.html
@@ -229,6 +229,7 @@
     .page-header {
       text-align: center;
       margin-bottom: 60px;
+       margin-top: 30px;
       animation: fadeInUp 1s ease-out;
     }
 
