--- a/services/index.html
+++ b/services/index.html
@@ -552,7 +552,7 @@
         <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
         <nav>
           <a href="/">Home</a>
-          <a href="/#services">Services</a>
+          <a href="/services">Services</a>
           <a href="/#work">Work</a>
           <a href="/pricing">Pricing</a>
           <a href="/#contact">Contact</a>
