--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
 
     /* Service Gallery */
     .service-gallery {
-      margin: 100px auto;
+    
+      margin-top:20px;
       position: relative;
       overflow: hidden;
       border-radius: 20px;
