--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     /* Service Gallery */
     .service-gallery {
     
-      margin-top:20px;
+       margin: 100px auto;
       position: relative;
       overflow: hidden;
       border-radius: 20px;
@@ -387,7 +387,8 @@
 
     .service-gallery-track {
       display: flex;
-      height: 100%;
+      height: 100%; 
+      margin-top:10px;
       transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1);
     }
 
