--- a/pricing/index.html
+++ b/pricing/index.html
@@ -637,7 +637,7 @@
   <header>
     <div class="container">
       <div class="header-content">
-        <a class="brand" href="/">
+        <a class="bran" href="/">
           <img src="https://astechit.in/assets/img/mylogo.png" alt="AS TECH IT SOLUTION logo">
           <span>AS TECH IT SOLUTION</span>
         </a>
@@ -818,3 +818,4 @@
     </section>
 
     <!-- Custom Quote Section
+
