--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
 
     /* Hero Section */
     .hero {
-      padding: 60px 0 20px;
+      padding: 60px 0 ;
+        padding-bottom: 0;
       text-align: center;
       position: relative;
     }
