--- a/index.html
+++ b/index.html
@@ -250,11 +250,12 @@
 
     /* Hero Section */
     .hero {
-      padding: 60px 0 ;
-        padding-bottom: 0;
+   padding: 120px 0 40px; /* top=120px, bottom reduced to 40px */
+       
       text-align: center;
       position: relative;
     }
+
 
     .hero-content {
       animation: fadeInUp 1s ease-out;
