--- a/index.html
+++ b/index.html
@@ -380,7 +380,8 @@
     /* Service Gallery */
     .service-gallery {
     
-      
+      padding: 30px 0;
+  margin-bottom: 40px;
       position: relative;
       overflow: hidden;
       border-radius: 20px;
