--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
       padding: 0;
       box-sizing: border-box;
     }
-
+#work {
+  padding: 80px 0;  /* desktop spacing */
+}
     :root {
       --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       --secondary-gradient: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
