--- a/pricing/index.html
+++ b/pricing/index.html
@@ -850,19 +850,21 @@
 }
 
 
-    .address-item .icon {
-      width: 20px;
-      height: 20px;
-      background: var(--accent-gradient);
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 11px;
-      margin-top: 2px;
-      flex-shrink: 0;
-    }
+  
+
+.address-item .icon {
+  width: 32px;
+  height: 32px;
+  background: var(--accent-gradient); /* uses your existing gradient */
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 14px;
+  flex-shrink: 0;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
 
     /* Social Media Section */
     .social-media h3 {
