--- a/pricing/index.html
+++ b/pricing/index.html
@@ -836,26 +836,44 @@
   text-align: left;
 }
 
+.address-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
 .address-item {
   flex: 1;
   min-width: 200px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
+/* Left item (Address) */
+.address-item:nth-child(1) {
+  justify-content: flex-start;
+  text-align: left;
+}
+
+/* Center item (Phone) */
 .address-item:nth-child(2) {
+  justify-content: center;
   text-align: center;
 }
 
+/* Right item (Email) */
 .address-item:nth-child(3) {
+  justify-content: flex-end;
   text-align: right;
 }
-
-
-  
 
 .address-item .icon {
   width: 32px;
   height: 32px;
-  background: var(--accent-gradient); /* uses your existing gradient */
+  background: var(--accent-gradient);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -865,6 +883,7 @@
   flex-shrink: 0;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
 }
+
 
     /* Social Media Section */
     .social-media h3 {
