--- a/pricing/index.html
+++ b/pricing/index.html
@@ -848,40 +848,43 @@
   flex: 1;
   min-width: 200px;
   display: flex;
-  align-items: center;
-  gap: 10px;
+  flex-direction: column; /* stack icon on top */
+  align-items: center;    /* center by default */
+  text-align: center;
+  gap: 8px;
 }
 
 /* Left item (Address) */
 .address-item:nth-child(1) {
-  justify-content: flex-start;
+  align-items: flex-start;
   text-align: left;
 }
 
 /* Center item (Phone) */
 .address-item:nth-child(2) {
-  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
 /* Right item (Email) */
 .address-item:nth-child(3) {
-  justify-content: flex-end;
+  align-items: flex-end;
   text-align: right;
 }
 
 .address-item .icon {
-  width: 32px;
-  height: 32px;
+  width: 40px;
+  height: 40px;
   background: var(--accent-gradient);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
-  font-size: 14px;
+  font-size: 16px;
   flex-shrink: 0;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  margin-bottom: 6px; /* space between icon and text */
 }
 
 
