--- a/index.html
+++ b/index.html
@@ -1608,7 +1608,7 @@
                 <div id="success-message" class="success-message">
                   Thank you! Your message has been sent successfully.
                 </div>
-                <form class="contact-form" onsubmit="submitContactForm(event)">
+                <form class="contact-form" id="contact" onsubmit="submitContactForm(event)">
                   <div class="form-row">
                     <div class="form-group">
                       <label class="form-label">Name *</label>
