--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
       padding: 0;
       box-sizing: border-box;
     }
+#services h2 {
+  margin-top: 40px;     /* space above heading */
+  margin-bottom: 30px;  /* space below heading */
+}
 
     :root {
       --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
