--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
   margin-top: 40px;     /* space above heading */
   margin-bottom: 30px;  /* space below heading */
 }
+    #work h2 {
+  margin-top: 40px;     /* space above heading */
+  margin-bottom: 30px;  /* space below heading */
+}
 
     :root {
       --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
