--- a/index.html
+++ b/index.html
@@ -78,6 +78,27 @@
   margin-bottom: 30px;  /* space below heading */
 }
 
+.footer-cta {
+  text-align: center;
+  padding: 40px 20px;
+  color: var(--text-primary);
+}
+
+.footer-cta h3 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+  color: var(--text-primary);
+}
+
+.footer-cta p {
+  font-size: 1.1rem;
+  max-width: 700px;
+  margin: 0 auto;
+  color: var(--text-secondary);
+}
+
+
+    
     :root {
       --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       --secondary-gradient: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
@@ -1609,8 +1630,12 @@
         <div class="footer-main">
           <!-- Contact Form -->
           <div class="footer-section contact-section">
-            <h3>Let's Build Something Amazing</h3>
-            <p class="contact-description">Ready to transform your digital presence? Tell us about your vision and we'll bring it to life.</p>
+           <div class="footer-cta">
+    <h3>Let's Build Something Amazing</h3>
+    <p class="contact-description">
+      Ready to transform your digital presence? Tell us about your vision and we'll bring it to life.
+    </p>
+  </div>    
             <div class="contact-form-section">
               <div class="contact-form-content">
                 <div id="success-message" class="success-message">
