--- a/index.html
+++ b/index.html
@@ -78,27 +78,10 @@
   margin-bottom: 30px;  /* space below heading */
 }
 
-.footer-cta {
-  text-align: center;
-  padding: 40px 20px;
-  color: var(--text-primary);
-}
-
-.footer-cta h3 {
-  font-size: 2rem;
-  margin-bottom: 10px;
-  color: var(--text-primary);
-}
-
-.footer-cta p {
-  font-size: 1.1rem;
-  max-width: 700px;
-  margin: 0 auto;
-  color: var(--text-secondary);
-}
 
 
-    
+
+  
     :root {
       --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       --secondary-gradient: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
@@ -279,7 +262,7 @@
 
     /* Hero Section */
     .hero {
-      padding: 60px 0 20px;
+      padding: 60px 0 ;
       text-align: center;
       position: relative;
     }
