--- a/index.html
+++ b/index.html
@@ -79,7 +79,27 @@
 }
 
 
+.footer-header {
+  text-align: center;
+  margin-bottom: 40px;  /* space between text and footer content */
+}
 
+.footer-header h3 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #fff;   /* adjust for your footer bg */
+}
+
+.footer-header p {
+  font-size: 16px;
+  color: #ccc;   /* softer text */
+  max-width: 600px;
+  margin: 0 auto; /* center the paragraph */
+}
+
+
+
+    
 
   
     :root {
@@ -1608,17 +1628,19 @@
    <!-- Custom Quote Section
 <!-- Enhanced Footer -->
   <footer class="footer">
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-main">
-          <!-- Contact Form -->
-          <div class="footer-section contact-section">
-           <div class="footer-cta">
+    <div class="footer-header">
     <h3>Let's Build Something Amazing</h3>
     <p class="contact-description">
       Ready to transform your digital presence? Tell us about your vision and we'll bring it to life.
     </p>
-  </div>    
+  </div>
+    <div class="container">
+      <div class="footer-content">
+        
+        <div class="footer-main">
+          <!-- Contact Form -->
+          <div class="footer-section contact-section">
+  
             <div class="contact-form-section">
               <div class="contact-form-content">
                 <div id="success-message" class="success-message">
