--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
     /* Hero Section */
     .hero {
-      padding: 60px 0 ;
+      padding: 60px 0 60px;
       text-align: center;
       position: relative;
     }
