--- a/index.html
+++ b/index.html
@@ -98,7 +98,22 @@
 }
 
 
+.hero {
+  min-height: 100vh;         /* full viewport height */
+  display: flex;             /* center content */
+  align-items: center;       /* vertical center */
+  justify-content: center;   /* horizontal center */
+  text-align: center;        /* center text */
+  padding: 40px 20px;        /* some breathing space */
+  box-sizing: border-box;    /* include padding in height calc */
+}
+.hero .container {
+  max-width: 1100px;         /* keeps content nicely aligned */
+  margin: 0 auto;
+}
 
+
+    
     
 
   
@@ -282,7 +297,7 @@
 
     /* Hero Section */
     .hero {
-      padding: 0px 0 30px;
+      padding: 60px 0 30px;
       text-align: center;
       position: relative;
     }
