--- a/pricing/index.html
+++ b/pricing/index.html
@@ -632,8 +632,7 @@
 	
     }
    #price h2 {
-  margin-top: 40px;     /* space above heading */
-  margin-bottom: 30px;  /* space below heading */
+   /* space below heading */
 }
 
     h2 {
