--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1294,7 +1294,7 @@
 
     <!-- Pricing Plans -->
     <section class="pricing-section container" id="price">
-		<h2>Our Price Plan</h2>
+		<h2>Our Pricing Plan</h2>
       <div class="pricing-grid">
         <!-- Basic Website -->
         <div class="pricing-card">
