--- a/index.html
+++ b/index.html
@@ -927,6 +927,7 @@
     <!-- Service Gallery -->
     <section class="service-gallery container fade-in">
       <div class="service-gallery-track" id="serviceTrack">
+		  <h2>Our Service Gallary</h2>
         <div class="service-slide">
           <img src="assets/img/simg/SD.jpg" alt="Custom Software Development">
           <div class="service-overlay">
