--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
 }
 
 .hero {
-  padding-top: 1px; /* ✅ add enough space for header height */
+  padding-top: 1px;
+	  margin: 0;/* ✅ add enough space for header height */
 }
 
 
