--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
           <h1>We Build <span class="accent">Software</span> & <span class="accent">Websites</span> That Help You Grow</h1>
           <p>From concept to launch, AS TECH IT SOLUTION delivers cutting-edge design, reliable engineering, and ongoing support to transform your digital presence.</p>
           <div class="cta-buttons">
-            <a class="btn btn-primary" href="#contact">
+            <a class="btn btn-primary" href="/contact">
               <span>🚀</span>
               Start Your Project
             </a>
