--- a/services/index.html
+++ b/services/index.html
@@ -43,6 +43,15 @@
   gap: 20px; /* Space between columns on smaller screens */
 }
 
+.footer-header {
+  text-align: center; /* Centers text */
+  display: flex;
+  flex-direction: column; /* Stack h3 and p vertically */
+  align-items: center; /* Centers the content horizontally */
+  justify-content: center; /* Optional: centers vertically if you give a height */
+  margin: 20px 0; /* Optional spacing */
+}
+  
 .contact-item.address {
   text-align: left;
   flex: 1;
