--- a/services/index.html
+++ b/services/index.html
@@ -36,6 +36,15 @@
       box-sizing: border-box;
     }
 
+.footer-header {
+  text-align: center;
+  margin: 0 auto;
+}
+
+
+
+
+    
     :root {
       --primary-gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       --secondary-gradient: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
