--- a/contact/index.html
+++ b/contact/index.html
@@ -1123,8 +1123,8 @@
                   <div class="contact-icon">✉️</div>
                   <div class="contact-text">
                     <h3>Email Us</h3>
-                    <p><a href="mailto:info@astechit.in">info@astechit.in</a><br>
-                    <a href="mailto:support@astechit.in">support@astechit.in</a></p>
+                    <p><a href="mailto: astech1811@gmail.com"> astech1811@gmail.com</a><br>
+                  </p>
                   </div>
                 </div>
 
