--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1556,7 +1556,7 @@
                 <div class="icon">✉️</div>
                 <div>
                   <strong>Email:</strong><br>
-                  info@astechit.in
+                 astech1811@gmail.com
                 </div>
               </div>
             </div>
