--- a/contact/index.html
+++ b/contact/index.html
@@ -1105,8 +1105,8 @@
                   <div class="contact-text">
                     <h3>Visit Our Office</h3>
                     <p>5th Floor, Dream Sapphire<br>
-                    Ulwe, Navi Mumbai - 410206<br>
-                    Maharashtra, India</p>
+                    Ulwe, Navi Mumbai <br>
+                    Maharashtra, India - 410206</p>
                   </div>
                 </div>
 
