--- a/services/index.html
+++ b/services/index.html
@@ -1288,8 +1288,8 @@
               <div>
                 <strong>Address:</strong><br>
                 5th Floor, Dream Sapphire<br>
-                Ulwe, Navi Mumbai - 410206<br>
-                Maharashtra, India
+                Ulwe, Navi Mumbai <br>
+                Maharashtra, India - 410206
               </div>
             </div>
             <div class="address-item">
