--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
     }
 
 
+.service-subcaption {
+  font-size: 0.9rem;
+  font-weight: 400;
+  color: #f0f0f0;
+  text-align: center;
+  max-width: 90%;
+  margin: 0 auto;
+  line-height: 1.4;
+}
+
+	  
 
  .container {
       max-width: 1200px;
@@ -987,7 +998,18 @@
           <div class="service-overlay">
             <div class="service-caption">Communication Solutions</div>
           </div>
-        </div>
+        </div> 
+
+
+           <div class="service-slide">
+  <img src="assets/img/simg/vegetable.jpg" alt="Vegetable Shop">
+  <div class="service-overlay">
+    <div class="service-caption">🥦 Vegetable Shop</div>
+    <div class="service-subcaption">Smart billing & delivery system to keep your veggies fresh and your sales smoother.</div>
+  </div>
+</div>
+
+		  
       </div>
     </section>
 
