--- a/index.html
+++ b/index.html
@@ -999,13 +999,76 @@
             <div class="service-caption">Communication Solutions</div>
           </div>
         </div> 
+<!-- 🎮 Gaming App & Software -->
+<div class="service-slide">
+  <img src="assets/img/simg/gaming.jpg" alt="Gaming App and Software">
+  <div class="service-overlay">
+    <div class="service-caption">🎮 Gaming App & Software</div>
+    <div class="service-subcaption">Designing high-performance gaming apps and smart software solutions that deliver fun, speed, and smooth control.</div>
+  </div>
+</div>
 
 
-           <div class="service-slide">
+          <!-- 🥦 Vegetable Shop -->
+<div class="service-slide">
   <img src="assets/img/simg/vegetable.jpg" alt="Vegetable Shop">
   <div class="service-overlay">
     <div class="service-caption">🥦 Vegetable Shop</div>
     <div class="service-subcaption">Smart billing & delivery system to keep your veggies fresh and your sales smoother.</div>
+  </div>
+</div>
+
+<!-- 🍽️ Restaurant / Food Shop -->
+<div class="service-slide">
+  <img src="assets/img/simg/restaurant.jpg" alt="Restaurant or Food Shop">
+  <div class="service-overlay">
+    <div class="service-caption">🍽️ Restaurant / Food Shop</div>
+    <div class="service-subcaption">From orders to bills — manage your restaurant effortlessly with our smart POS & delivery solutions.</div>
+  </div>
+</div>
+
+<!-- ✂️ Salon / Barber Shop -->
+<div class="service-slide">
+  <img src="assets/img/simg/salon1.jpg" alt="Salon or Barber Shop">
+  <div class="service-overlay">
+    <div class="service-caption">✂️ Salon / Barber Shop</div>
+    <div class="service-subcaption">Streamline your appointments, billing & customer records — because every style deserves smooth management.</div>
+  </div>
+</div>
+
+<!-- 🍷 Wine Shop -->
+<div class="service-slide">
+  <img src="assets/img/simg/wine.jpg" alt="Wine Shop">
+  <div class="service-overlay">
+    <div class="service-caption">🍷 Wine Shop</div>
+    <div class="service-subcaption">Simplify stock tracking, billing & age verification with a modern wine shop management system.</div>
+  </div>
+</div>
+
+<!-- 🚗 Car / Bike Service Center -->
+<div class="service-slide">
+  <img src="assets/img/simg/carservice.jpg" alt="Car or Bike Service Center">
+  <div class="service-overlay">
+    <div class="service-caption">🚗 Car / Bike Service Center</div>
+    <div class="service-subcaption">Track jobs, manage inventory & bill customers faster — make your service center truly smart.</div>
+  </div>
+</div>
+
+<!-- 💡 Electronics Shop -->
+<div class="service-slide">
+  <img src="assets/img/simg/electronics.jpg" alt="Electronics Shop">
+  <div class="service-overlay">
+    <div class="service-caption">💡 Electronics Shop</div>
+    <div class="service-subcaption">Easy billing, warranty tracking & inventory control — power up your electronics business with automation.</div>
+  </div>
+</div>
+
+<!-- 🏪 General Store / Supermarket -->
+<div class="service-slide">
+  <img src="assets/img/simg/generalstore.jpg" alt="General Store or Supermarket">
+  <div class="service-overlay">
+    <div class="service-caption">🏪 General Store / Supermarket</div>
+    <div class="service-subcaption">Smart POS, billing & inventory — everything your store needs to run fast and efficiently.</div>
   </div>
 </div>
 
